Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -2,5 +2,6 @@
 
 = How to start =
 
-B - give your facebook name - as written in the url.
-As the Token, get one from Graph API Explorer.
+# B
+# As Address - give your facebook name - as written in the url.
+# As the Token, get one from Graph API Explorer.
